fixed: review modal eye icons z-index

--- a/app/styles/components/_request-review-modal.scss
+++ b/app/styles/components/_request-review-modal.scss
@@ -157,6 +157,7 @@
   right: 20px;
   padding: 0;
   border-width: 0;
+  z-index: 2;
   background-color: transparent;
 
   > svg {
